packages/nci-engine/tests/snapshots/snapshot_tests__rust_member-property-extraction.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "member-property-extraction",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "member-property-extraction@1.0.0::base.d.ts::AST_NODE_TYPES",
      "name": "AST_NODE_TYPES",
      "kind": 267,
      "kindName": "EnumDeclaration",
      "package": "member-property-extraction",
      "filePath": "base.d.ts",
      "signature": "export declare enum AST_NODE_TYPES {\n    AccessorProperty = \"AccessorProperty\",\n    ArrayExpression = \"ArrayExpression\",\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::AccessorPropertyComputedName",
      "name": "AccessorPropertyComputedName",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare interface AccessorPropertyComputedName extends BaseNode {\n    type: AST_NODE_TYPES.AccessorProperty;\n    computed: true;\n}",
      "jsDoc": "Heritage from an IMPORTED interface from a DIFFERENT file.",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "member-property-extraction@1.0.0::base.d.ts::BaseNode"
      ],
      "isInternal": false,
      "heritage": [
        "BaseNode"
      ],
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::AccessorPropertyComputedName.computed",
      "name": "AccessorPropertyComputedName.computed",
      "parentSymbolId": "member-property-extraction@1.0.0::AccessorPropertyComputedName",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "computed: true;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::AccessorPropertyComputedName.range",
      "name": "AccessorPropertyComputedName.range",
      "parentSymbolId": "member-property-extraction@1.0.0::AccessorPropertyComputedName",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "base.d.ts",
      "signature": "range: [number, number];",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true,
      "isInherited": true,
      "inheritedFromSources": [
        "member-property-extraction@1.0.0::base.d.ts::BaseNode.range"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::AccessorPropertyComputedName.type",
      "name": "AccessorPropertyComputedName.type",
      "parentSymbolId": "member-property-extraction@1.0.0::AccessorPropertyComputedName",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "type: AST_NODE_TYPES.AccessorProperty;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::BRIDGE_METHODS",
      "name": "BRIDGE_METHODS",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "declare const BRIDGE_METHODS: {\n    readonly SELECT: \"BRIDGE_SELECT\";\n    readonly MEASURE: \"BRIDGE_MEASURE\";\n}",
      "jsDoc": "Const object literal shape (caliper-style) for `parentSymbolId` tests.",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::BRIDGE_METHODS.MEASURE",
      "name": "BRIDGE_METHODS.MEASURE",
      "parentSymbolId": "member-property-extraction@1.0.0::BRIDGE_METHODS",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "readonly MEASURE: \"BRIDGE_MEASURE\";",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "readonly"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::BRIDGE_METHODS.SELECT",
      "name": "BRIDGE_METHODS.SELECT",
      "parentSymbolId": "member-property-extraction@1.0.0::BRIDGE_METHODS",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "readonly SELECT: \"BRIDGE_SELECT\";",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "readonly"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::base.d.ts::BaseNode",
      "name": "BaseNode",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "member-property-extraction",
      "filePath": "base.d.ts",
      "signature": "export declare interface BaseNode {\n    type: AST_NODE_TYPES;\n    range: [number, number];\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "member-property-extraction@1.0.0::base.d.ts::AST_NODE_TYPES"
      ],
      "isInternal": true,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::base.d.ts::BaseNode.range",
      "name": "BaseNode.range",
      "parentSymbolId": "member-property-extraction@1.0.0::base.d.ts::BaseNode",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "base.d.ts",
      "signature": "range: [number, number];",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "member-property-extraction@1.0.0::base.d.ts::BaseNode.type",
      "name": "BaseNode.type",
      "parentSymbolId": "member-property-extraction@1.0.0::base.d.ts::BaseNode",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "base.d.ts",
      "signature": "type: AST_NODE_TYPES;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [
        "member-property-extraction@1.0.0::base.d.ts::AST_NODE_TYPES"
      ],
      "isInternal": true
    },
    {
      "id": "member-property-extraction@1.0.0::CaliperNS",
      "name": "CaliperNS",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare namespace CaliperNS {\n    export interface BenchOpts {\n        label: string;\n        refresh(): void;\n    }\n    export function snapshot(): void;\n}",
      "jsDoc": "Exported namespace: qualified `Ns.Child.member` parents, including nested interface\n`PropertySignature` / `MethodSignature` and a namespace-level function export.",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::CaliperNS.BenchOpts",
      "name": "CaliperNS.BenchOpts",
      "parentSymbolId": "member-property-extraction@1.0.0::CaliperNS",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::CaliperNS",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export interface BenchOpts {\n        label: string;\n        refresh(): void;\n    }",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::CaliperNS.BenchOpts.label",
      "name": "CaliperNS.BenchOpts.label",
      "parentSymbolId": "member-property-extraction@1.0.0::CaliperNS.BenchOpts",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::CaliperNS",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "label: string;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::CaliperNS.BenchOpts.refresh",
      "name": "CaliperNS.BenchOpts.refresh",
      "parentSymbolId": "member-property-extraction@1.0.0::CaliperNS.BenchOpts",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::CaliperNS",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "refresh(): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::CaliperNS.snapshot",
      "name": "CaliperNS.snapshot",
      "parentSymbolId": "member-property-extraction@1.0.0::CaliperNS",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::CaliperNS",
      "kind": 263,
      "kindName": "FunctionDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export function snapshot(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::MethodSigParent",
      "name": "MethodSigParent",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare interface MethodSigParent {\n    onFlush(): void;\n}",
      "jsDoc": "Interface member with `MethodSignature` (vs object literal / class body shapes).",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::MethodSigParent.onFlush",
      "name": "MethodSigParent.onFlush",
      "parentSymbolId": "member-property-extraction@1.0.0::MethodSigParent",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "onFlush(): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::OuterNS",
      "name": "OuterNS",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare namespace OuterNS {\n    export declare class InnerWidget {\n        slot: string;\n        mount(): void;\n    }\n}",
      "jsDoc": "Nested namespace + class: `*.prototype.*` members resolve parent to the qualified class\nsymbol (`OuterNS.InnerWidget`), matching `parent_name_for_dotted_member` (prefix before `prototype`).",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::OuterNS.InnerWidget",
      "name": "OuterNS.InnerWidget",
      "parentSymbolId": "member-property-extraction@1.0.0::OuterNS",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::OuterNS",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare class InnerWidget {\n        slot: string;\n        mount(): void;\n    }",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::OuterNS.InnerWidget.prototype.mount",
      "name": "OuterNS.InnerWidget.prototype.mount",
      "parentSymbolId": "member-property-extraction@1.0.0::OuterNS.InnerWidget",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::OuterNS",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "mount(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::OuterNS.InnerWidget.prototype.slot",
      "name": "OuterNS.InnerWidget.prototype.slot",
      "parentSymbolId": "member-property-extraction@1.0.0::OuterNS.InnerWidget",
      "enclosingModuleDeclarationId": "member-property-extraction@1.0.0::OuterNS",
      "kind": 173,
      "kindName": "PropertyDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "slot: string;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::ParserOptions",
      "name": "ParserOptions",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare class ParserOptions {\n    debugLevel: number;\n    getParser(name: string): any;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::ParserOptions.prototype.debugLevel",
      "name": "ParserOptions.prototype.debugLevel",
      "parentSymbolId": "member-property-extraction@1.0.0::ParserOptions",
      "kind": 173,
      "kindName": "PropertyDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "debugLevel: number;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::ParserOptions.prototype.getParser",
      "name": "ParserOptions.prototype.getParser",
      "parentSymbolId": "member-property-extraction@1.0.0::ParserOptions",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "getParser(name: string): any;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "member-property-extraction@1.0.0::ParserServices",
      "name": "ParserServices",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "export declare interface ParserServices {\n    esTreeNodeToTSNodeMap: Map<string, string>;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "member-property-extraction@1.0.0::ParserServices.esTreeNodeToTSNodeMap",
      "name": "ParserServices.esTreeNodeToTSNodeMap",
      "parentSymbolId": "member-property-extraction@1.0.0::ParserServices",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "member-property-extraction",
      "filePath": "index.d.ts",
      "signature": "esTreeNodeToTSNodeMap: Map<string, string>;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    }
  ],
  "totalSymbols": 27,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
