packages/nci-engine/tests/snapshots/snapshot_tests__rust_merged-namespace-plain-type-refs.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "merged-namespace-plain-type-refs",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::Dispatcher",
      "name": "Dispatcher",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export declare class Dispatcher {\n  close(): void;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::Dispatcher#2",
      "name": "Dispatcher",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export declare namespace Dispatcher {\n  interface Options {\n    retries: number;\n  }\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::index.d.ts::Dispatcher.Options",
      "name": "Dispatcher.Options",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::Dispatcher#2",
      "enclosingModuleDeclarationId": "merged-namespace-plain-type-refs@1.0.0::Dispatcher#2",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "interface Options {\n    retries: number;\n  }",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::index.d.ts::Dispatcher.Options.retries",
      "name": "Dispatcher.Options.retries",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::index.d.ts::Dispatcher.Options",
      "enclosingModuleDeclarationId": "merged-namespace-plain-type-refs@1.0.0::Dispatcher#2",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "retries: number;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::Dispatcher.prototype.close",
      "name": "Dispatcher.prototype.close",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::Dispatcher",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "close(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesArray",
      "name": "UsesArray",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export interface UsesArray {\n  items: Dispatcher[];\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesArray.items",
      "name": "UsesArray.items",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::UsesArray",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "items: Dispatcher[];",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesGeneric",
      "name": "UsesGeneric",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export interface UsesGeneric {\n  sequence: Array<Dispatcher>;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesGeneric.sequence",
      "name": "UsesGeneric.sequence",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::UsesGeneric",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "sequence: Array<Dispatcher>;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesPlain",
      "name": "UsesPlain",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export interface UsesPlain {\n  current: Dispatcher;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesPlain.current",
      "name": "UsesPlain.current",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::UsesPlain",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "current: Dispatcher;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::Dispatcher"
      ],
      "isInternal": false
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesPlain.current.close",
      "name": "UsesPlain.current.close",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::UsesPlain.current",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "close(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesQualified",
      "name": "UsesQualified",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "export interface UsesQualified {\n  options: Dispatcher.Options;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::index.d.ts::Dispatcher.Options"
      ],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "merged-namespace-plain-type-refs@1.0.0::UsesQualified.options",
      "name": "UsesQualified.options",
      "parentSymbolId": "merged-namespace-plain-type-refs@1.0.0::UsesQualified",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "merged-namespace-plain-type-refs",
      "filePath": "index.d.ts",
      "signature": "options: Dispatcher.Options;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [
        "merged-namespace-plain-type-refs@1.0.0::index.d.ts::Dispatcher.Options"
      ],
      "isInternal": false
    }
  ],
  "totalSymbols": 14,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
